# bobblemail

./: .gitignore  .task_status.json  4_CATEGORY_DEPLOYMENT_COMPLETE.md  ATLAS_ADAPTIVE_GUIDE.md  ATLAS_COMMANDS.md  ATLAS_COMMANDS_SIMPLE.md  ATLAS_EMAIL_PERFORMANCE_OPTIMIZATION_MISSION.md  ATLAS_ORCHESTRATION_QUICKREF.md  Bobble.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.old  CONNECTION_POOL_ENFORCEMENT_SUMMARY.md  CURRENT_CONVERSATION.md  CURRENT_WORK_SUMMARY.md  DEVELOPMENT_BELIEFS.md  DEVELOPMENT_CONVENTION.md  DOMAIN_VALIDATION_ANALYSIS_2025_06_11.md  FRESH_COMPACT_MEMORY.md  IMPORTANT_NOTES.md  PERFORMANCE_OPTIMIZATION_EXECUTIVE_SUMMARY.md  README.md  REFINE_TOOL_INSTRUCTIONS.md  SHORT_IMPORTANT_MEMORY.md  STATUS.md  TEMPLATE_CONNECTION_MISSION.md  TRANSACTIONAL_EMAIL_SYSTEM.md  advanced_ml_integration.py  atlas-checkpoint  atlas-create-todos  atlas-export  atlas-orchestrate  atlas-orchestrate-enhanced  atlas-orchestrate-todo  atlas-restore  atlas-save  atlas-stage  atlas_auto_commit.py  atlas_consciousness_quickstart.py  (+57 more)
REPOS/Atlas_Email/: .gitignore  .pre-commit-config.yaml  4_CATEGORY_IMPLEMENTATION_REPORT.md  4_category_deployment_status.json  FRED_2_INTEGRATION_TEST_REPORT.md  FRED_V2_COMPREHENSIVE_TESTING_REPORT.md  FRED_V2_TESTING_SUMMARY.json  GEOGRAPHIC_OPTIMIZATION_REPORT.md  INTEGRATION_GUIDE.md  Makefile  PERFORMANCE_IMPACT_ANALYSIS.yaml  PHASE1_PERFORMANCE_REPORT.md  STRATEGIC_INTELLIGENCE_TEST_HARNESS_STANDALONE.py  STRUCTURE.md  TODO.md  atlas_cli.command  code_audit_report.md  deploy_4_category_system.py  final_integration_demo.py  (+19 more)
(+572 files in other folders)
